# learning

./: README.md
A Programmer's Guide to Data Mining/: README.md  note_back.md
A Programmer's Guide to Data Mining/ch2/: book_code.py  filteringdata.py  recommender.py
A Programmer's Guide to Data Mining/ch3/: recommender3.py
A Programmer's Guide to Data Mining/ch4/: classifyTemplate.py  filtering_by_vector.py  filteringdata.py  normalizeColumnTemplate.py  testMedianAndASD.py
A Programmer's Guide to Data Mining/ch5/: cross_validation.py  cross_validation_from_book.py  divide.py  nearestNeighborClassifier.py  pimaKNN.py
A Programmer's Guide to Data Mining/ch6/: NaiveBayes.py  NaiveBayes_from_book.py  naiveBayesDensityFunction.py  naiveBayesDensityFunction_from_book.py
A Programmer's Guide to Data Mining/ch7/: bayesSentiment.py  bayesText.py  bayesText_from_book.py
Black Hat Python/: README.md
Black Hat Python/Capter2/: TCPClient.py  (+3 more)
DOM Scripting/: CSS-DOM-itinerary.html  CSS-DOM.html  README.md  abbreviation.html  ajax.html  canvas.html  example.html  forms.html  grayscale.html  list.html  message.html  player.html  shopping.html  snapshots.html
Play With Data Structure/: CMakeLists.txt  README.md
Play With Data Structure/chapter3/: LinkList.c  List.c
Play With Data Structure/chapter4/: DoubleStack.c  Stack.c
Play With Data Structure/chapter5/: BiTreeArray.c
Python Network Programming Cookbook/: README.md
Web_Scraping_with_Python_Book/: .gitignore  note.md
data structure in school/: README.md
python modules usage note/: README.md  getopt.md
(+71 files in other folders)
